[VP]Remove -DLINUX pre-compile definitions
Remove -DLINUX pre-compile definitions
Fixes: #449

--- a/Tools/MediaDriverTools/GenDmyHex/CMakeLists.txt
+++ b/Tools/MediaDriverTools/GenDmyHex/CMakeLists.txt
@@ -22,6 +22,6 @@ cmake_minimum_required (VERSION 2.8)
 project(IntelGenDmyHexTool) 
 add_compile_options(-std=c++11)
 
-add_definitions(-DLINUX_)
+add_definitions(-D__linux__)
 
 add_executable(GenDmyHex main.cpp)
