--- a/Tools/MediaDriverTools/KrnToHex/CMakeLists.txt
+++ b/Tools/MediaDriverTools/KrnToHex/CMakeLists.txt
@@ -22,6 +22,6 @@ cmake_minimum_required (VERSION 2.8)
 project(KrnToHexTool) 
 add_compile_options(-std=c++11)
 
-add_definitions(-DLINUX_) 
+add_definitions(-D__linux__)
 
 add_executable(KrnToHex KrnToHex.cpp) 
