[Upstream] DG1 open source stage 2
Add build option to support production kmd:
* ENABLE_PRODUCTION_KMD=ON (OFF by default)
Once enabled this option will trigger driver build against
not-upstreamed i915 uAPI stored at the following location inside
media driver repo:
* media_driver/linux/common/os/i915_production/include/
and enable support for the following platforms:
* DG1
i915 uAPI for the DG1 was taken from the following location:
* https://repositories.intel.com/graphics/kernel-api/drm-headers-20200624.tgz
See media_driver/linux/common/os/i915_production/include/README.md
for future update instructions.
Author:Molly Hu <molly.hu@intel.com>
Author:Carl Zhang <carl.zhang@intel.com>
Signed-off-by:Carl Zhang <carl.zhang@intel.com>

Change-Id: I5a7d69e925da7f05ac8ff6f054b12f5d1483d41a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,8 @@ cmake_dependent_option( BUILD_KERNELS
     "ENABLE_KERNELS;NOT ENABLE_NONFREE_KERNELS" OFF)
 option (BUILD_CMRTLIB "Build and Install cmrtlib together with media driver" ON)
 
+option (ENABLE_PRODUCTION_KMD "Enable Production KMD header files" OFF)
+
 include(GNUInstallDirs)
 
 if (BUILD_CMRTLIB)
@@ -137,3 +139,4 @@ endif()
 set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${DISTRO_INFO}-${PACKAGE_TYPE}")
 
 include(CPack)
+
