--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 install:
   - cd ..
   - git clone https://github.com/intel/gmmlib.git gmmlib
-  - git clone https://github.com/intel/libva.git libva
+  - git clone https://github.com/shiqiangyu/libva.git libva
   - cd ./media-driver
 
 script:
