fix ult build issue

--- a/media_driver/linux/ult/libdrm_mock/CMakeLists.txt
+++ b/media_driver/linux/ult/libdrm_mock/CMakeLists.txt
@@ -21,7 +21,7 @@ cmake_minimum_required(VERSION 2.8)
 
 project(libdrm_mock)
 
-include_directories(../../common/os/i915/include ../inc)
+include_directories(../../common/os ../../common/os/i915/include ../inc)
 aux_source_directory(. SOURCES)
 
 if (MEDIA_EXT)
@@ -32,6 +32,11 @@ if (MEDIA_EXT)
         ${MEDIA_EXT_ULT}/linux/mock/libdrm_mock/xf86drm_mock.c
 )
 endif ()
+
+set(SOURCES
+    ${SOURCES}
+    ${MEDIA_DRIVER_LINUX}/common/os/mos_vma.c
+)
 
 set_source_files_properties(${SOURCES} PROPERTIES LANGUAGE "CXX")
 add_library(drm_mock SHARED ${SOURCES})
