--- a/media_driver/linux/ult/libdrm_mock/CMakeLists.txt
+++ b/media_driver/linux/ult/libdrm_mock/CMakeLists.txt
@@ -41,6 +41,7 @@ set(SOURCES
 set_source_files_properties(${SOURCES} PROPERTIES LANGUAGE "CXX")
 add_library(drm_mock SHARED ${SOURCES})
 target_include_directories(drm_mock BEFORE PRIVATE
+${COMMON_CP_DIRECTORIES_}
 ${SOFTLET_MOS_PREPEND_INCLUDE_DIRS_}
 ${MOS_PUBLIC_INCLUDE_DIRS_}     ${SOFTLET_MOS_PUBLIC_INCLUDE_DIRS_}
 ${COMMON_PRIVATE_INCLUDE_DIRS_} ${SOFTLET_COMMON_PRIVATE_INCLUDE_DIRS_}
