[Decode] Media on Xe kernel, media infrastructure implement
This patch implements
1) query api, including query gts info, mem info;
2) drm sync api, including syncobj signal, wait, timeline;
3) bo, engine creation, vimbind, exec.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ cmake_dependent_option( BUILD_KERNELS
 option (BUILD_CMRTLIB "Build and Install cmrtlib together with media driver" ON)
 
 option (ENABLE_PRODUCTION_KMD "Enable Production KMD header files" OFF)
+option (ENABLE_XE_KMD "Enable XE KMD header files" ON)
 
 include(GNUInstallDirs)
 
